--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=api
 spring.datasource.url=jdbc:postgresql://localhost:5432/eventostec
 spring.datasource.username=izabella
 spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
